Fixed SimpleContext using JavaCompiler.compilerKey is error in java8 as is protected. Adapted to use passed in classpath object